# Computer-Graphics-Labwork

./: CMakeLists.txt  first_app.cpp  lve_device.cpp
